languages/EmbeddedMontiArcDynamics/src/test/resources/test/embeddedmontiarcdynamic/cocos/invalid/newInOutSideEvent/V2.emad
/* (c) https://github.com/MontiCore/monticore */

package newInOutSideEvent;

component V2 {

    ports
        in Q a,
        out Q b;

    connect 123 -> b[?];
    connect a -> b[?];

}
